--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AIS Aspire</title>
-    <meta name="description" content="Modern Architecture & Design Studio" />
-    <meta name="author" content="Urbainex+" />
+    <meta name="description" content="AIS Aspire" />
+    <meta name="author" content="AIS Aspire Solutions" />
 
-    <meta property="og:title" content="Urbainex+ Architecture" />
-    <meta property="og:description" content="Modern Architecture & Design Studio" />
+    <meta property="og:title" content="AIS Aspire" />
+    <meta property="og:description" content="AIS Aspire Solutions" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
